--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
   },
   "dependencies": {
     "@prisma/client": "5.18.0",
+    "bcryptjs": "2.4.3",
+    "clsx": "2.1.1",
     "next": "14.2.8",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "zod": "3.23.8",
-    "clsx": "2.1.1",
-    "bcryptjs": "2.4.3"
+    "zod": "3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.6",
+    "@types/node": "^24.5.0",
+    "@types/react": "^19.1.13",
     "autoprefixer": "10.4.20",
     "postcss": "8.4.47",
     "prisma": "5.18.0",
     "tailwindcss": "3.4.10",
-    "typescript": "5.6.2",
-    "@types/bcryptjs": "2.4.6",
-    "tsx": "4.19.1"
+    "tsx": "4.19.1",
+    "typescript": "5.6.2"
   }
 }
