--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "prisma generate && next build",
-    "start": "next start",
-    "postinstall": "prisma generate",
-    "seed": "tsx prisma/seed.ts"
+    "seed": "node prisma/seed.mjs"
   },
   "dependencies": {
     "@prisma/client": "5.18.0",
+    "@vercel/blob": "^2.0.0",
     "bcryptjs": "2.4.3",
     "clsx": "2.1.1",
     "next": "14.2.8",
