--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@vercel/blob": "^2.0.0",
     "bcryptjs": "2.4.3",
     "clsx": "2.1.1",
+    "lucide-react": "^0.544.0",
     "next": "14.2.8",
     "react": "18.3.1",
     "react-dom": "18.3.1",
