--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "seed": "node prisma/seed.mjs"
   },
   "dependencies": {
-    "@prisma/client": "5.18.0",
+    "@prisma/client": "^5.18.0",
     "@vercel/blob": "^2.0.0",
     "bcryptjs": "2.4.3",
     "clsx": "2.1.1",
@@ -22,12 +22,9 @@
     "@types/react": "^19.1.13",
     "autoprefixer": "10.4.20",
     "postcss": "8.4.47",
-    "prisma": "5.18.0",
+    "prisma": "^5.18.0",
     "tailwindcss": "3.4.10",
     "tsx": "4.19.1",
     "typescript": "5.6.2"
-  },
-"scripts": {
-  "seed": "node prisma/seed.mjs"
-}
+  }
 }
